APITaxi2: add POST /taxis and fix PUT /taxis/:id
In the previous version, PUT /taxis/:id acted as a PATCH. It accepted
any object, but only updated the "status" field. APITaxi2 is now
backward compatible.

--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ Migration from APITaxi to APITaxi2
 
 - taxi.py:
     * GET /taxis/:taxi_id: DONE
-    * PUT /taxis/:taxi_id: TODO
+    * PUT /taxis/:taxi_id: DONE
     * GET /taxis: TODO
     * POST /taxis: TODO
 
@@ -24,3 +24,6 @@ Migration from APITaxi to APITaxi2
 
 - waiting_time.py: TODO? not sure it is used, or working.
 - healthchecks.py: TODO? not used today, but can definitely be useful.
+
+
+- return HTTP/201 for new objects (POST /ads, POST /taxis, ...)
