--- a/TODO
+++ b/TODO
@@ -9,8 +9,8 @@ Migration from APITaxi to APITaxi2
 - taxi.py:
     * GET /taxis/:taxi_id: DONE
     * PUT /taxis/:taxi_id: DONE
+    * POST /taxis: DONE
     * GET /taxis: TODO
-    * POST /taxis: TODO
 
 - documents.py: Not used, can be removed from the API
 
