--- a/TODO
+++ b/TODO
@@ -5,12 +5,7 @@ Migration from APITaxi to APITaxi2
 - users.py: DONE
 - drivers.py: DONE
 - ADS.py: DONE
-
-- taxi.py:
-    * GET /taxis/:taxi_id: DONE
-    * PUT /taxis/:taxi_id: DONE
-    * POST /taxis: DONE
-    * GET /taxis: TODO
+- taxi.py: DONE
 
 - documents.py: Not used, can be removed from the API
 
