--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@ Migration from APITaxi to APITaxi2
    [PUT /hails/:id]      DONE
    [POST /hails]         TODO
    [GET /hails]          TODO
-   [GET /hails/:id/_log] TODO? not sure it is used
+   [GET /hails/:id/_log] UNUSED
 
 - __init__.py: TODO (contains swagger documentation)
 
